--- a/src/css/app.css
+++ b/src/css/app.css
@@ -3,6 +3,17 @@
 .panel {
     width: 400px;
 }
+
+#map {
+    top: 10px;
+    width: 100%;
+    height: 86vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
 @media only screen and (max-width: 1200px) {
     .panel {
         width: 260px;
