--- a/src/css/app.css
+++ b/src/css/app.css
@@ -5,18 +5,21 @@
 }
 
 #map {
-    top: 10px;
+    top: 0; 
     width: 100%;
-    height: 86vh;
+    height: "100%";
+    min-height: "100%";
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    padding: 0;
 }
 
 .leaflet-control-container .leaflet-routing-container {
     background-color: #333;
     color: #fff;
+    display: none;
   }
 
 @media only screen and (max-width: 1200px) {
