Added functionality to enable adding or deltion mode of markers
- Added new component CurrentLocation to handle the gelocation logic to get the start point
- Added uuid and @types/uuid to have uuids instead of dates as marker id
- Updated the SimpleMarkers component to work correctly with background changes on mode toggles
- Added add and delte logic to map component
- Updated MapMarker to use string instead of number for the id to be able to store a uuid
- Did some cleanup in the map component
- Removed unsuted type definition and components

--- a/src/css/app.css
+++ b/src/css/app.css
@@ -66,10 +66,16 @@
 	background-color: #f4f4f4;
 } 
 
-.add_marker_control.enabled,
-.del_marker_control.enabled {
-  background-color: #f00; 
-}
+.add_marker_control[data-selected="true"] {
+    background-color: green;
+  }
+  
+  .del_marker_control[data-selected="true"] {
+    background-color: red;
+  }
+  
+
+
 
 @media only screen and (max-width: 1200px) {
     .panel {
