--- a/src/css/app.css
+++ b/src/css/app.css
@@ -14,6 +14,7 @@
   justify-content: center;
   align-items: center;
   padding: 0;
+  margin: 0;
 }
 
 .leaflet-control-container .leaflet-routing-container {
@@ -85,9 +86,7 @@
 }
 
 .leaflet-searchbox-wrapper .leaflet-searchbox,
-.leaflet-searchbox-wrapper .leaflet-searchbox-button,
-.leaflet-searchbox-container .leaflet-searchbox-autocomplete,
-.leaflet-searchbox-autocomplete .leaflet-searchbox-autocomplete-item {
+.leaflet-searchbox-wrapper .leaflet-searchbox-button {
     background-color: white;    
     border: 1px rgb(0, 0, 0, 0.3) solid;
     outline: none;
@@ -107,13 +106,6 @@
     border-bottom-left-radius: 20px 50%;
     border-right: none;
     padding: 0px 0px 0px 15px;
-}
-
-.leaflet-searchbox-wrapper .leaflet-searchbox-right {
-    border-top-right-radius: 20px 50%;
-    border-bottom-right-radius: 20px 50%;
-    border-left: none;
-    padding: 0px 15px 0px 0px;
 }
 
 .leaflet-searchbox-wrapper .leaflet-searchbox-button {
@@ -147,37 +139,6 @@
     height: auto;
 }
 
-.leaflet-searchbox-container .leaflet-searchbox-autocomplete {
-    position: absolute;
-    top: 20px;
-    width: 100%;
-    list-style-type: none;
-    margin: 0px;
-    padding: 20px 0px 0px 0px;
-    background-color: white;
-    border-top: none;
-    z-index: 701;
-}
-
-.leaflet-searchbox-container .leaflet-searchbox-autocomplete:empty {
-    display: none;
-}
-
-.leaflet-searchbox-autocomplete .leaflet-searchbox-autocomplete-item {
-    width: 100%;
-    border-left: none;
-    border-right: none;
-    border-top: none;
-    z-index: 701;
-    font-size: 15px;
-    padding: 3px 10px;
-    cursor: pointer;
-}
-
-.leaflet-searchbox-autocomplete .leaflet-searchbox-autocomplete-item:hover {
-    background-color: #f3f3f3;
-}
-
 .collapsed .leaflet-searchbox {
     width: 0px !important;
     padding: 0px;
@@ -195,14 +156,23 @@
     border: 1px rgb(0, 0, 0, 0.3) solid;
 }
 
-.collapsed .leaflet-searchbox-autocomplete {
-    display: none;
-}
-
 .leaflet-searchbox-wrapper.open .leaflet-searchbox,
 .leaflet-searchbox-wrapper.open .leaflet-searchbox-button {
     border-bottom-left-radius: 0px;
     border-bottom-right-radius: 0px;
+}
+
+.routing-button {
+  border: none;
+  background-color: white;
+  color: blue;
+  font-weight: bold;
+}
+
+.hidden-link {
+  display: none;
+  visibility: hidden;
+  height: 0px;
 }
 
 @media only screen and (max-width: 1200px) {
