Added toast in case geolocation is not supported by the browser

--- a/src/css/app.css
+++ b/src/css/app.css
@@ -175,6 +175,14 @@
   height: 0px;
 }
 
+.error-toast {
+  background-color: red;
+  color: white;
+  padding: 10px;
+  border-radius: 5px;
+  margin-bottom: 10px;
+}
+
 @media only screen and (max-width: 1200px) {
   .panel {
     width: 260px;
